--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,10 @@
   box-shadow: 0 3px 6px -4px rgba(0, 0, 0, .12), 0 6px 16px 0 rgba(0, 0, 0, .08), 0 9px 28px 8px rgba(0, 0, 0, .05);
 }
 
+.ant-table-thead > tr > th {
+  font-weight: bold;
+}
+
 .single-uploader {
   width: 128px;
   height: 128px;
