--- a/src/app/pages/cms-example/cms-example.component.html
+++ b/src/app/pages/cms-example/cms-example.component.html
@@ -9,11 +9,11 @@
         {{bit.l['picture']}}
       </nz-form-label>
       <nz-form-control bitCol="control">
-        <van-picture
+        <v-picture
           formControlName="picture"
           [allowSort]="true"
           [limit]="5"
-        ></van-picture>
+        ></v-picture>
       </nz-form-control>
     </nz-form-item>
 
@@ -22,11 +22,11 @@
         {{bit.l['video']}}
       </nz-form-label>
       <nz-form-control bitCol="control">
-        <van-video
+        <v-video
           formControlName="video"
           [allowSort]="true"
           [limit]="5"
-        ></van-video>
+        ></v-video>
       </nz-form-control>
     </nz-form-item>
 
@@ -35,7 +35,7 @@
         {{bit.l['richtext']}}
       </nz-form-label>
       <nz-form-control bitCol="control">
-        <van-richtext formControlName="richtext"></van-richtext>
+        <v-richtext formControlName="richtext"></v-richtext>
       </nz-form-control>
     </nz-form-item>
 
