--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,35 +1,1 @@
-@import "https://cdn.jsdelivr.net/npm/animate.css@4.1.1/animate.min.css";
-
-::-webkit-scrollbar {
-  width: 5px;
-}
-
-::-webkit-scrollbar-track {
-  background: #ddd;
-}
-
-::-webkit-scrollbar-thumb {
-  background: #666;
-}
-
-.ant-menu-sub.center-submenu {
-  margin-left: -64px;
-}
-
-.swal2-ant-modal {
-  border-radius: 2px !important;
-  box-shadow: 0 3px 6px -4px rgba(0, 0, 0, .12), 0 6px 16px 0 rgba(0, 0, 0, .08), 0 9px 28px 8px rgba(0, 0, 0, .05);
-}
-
-.ant-table-thead > tr > th {
-  font-weight: bold;
-}
-
-.single-uploader {
-  width: 128px;
-  height: 128px;
-
-  img {
-    width: 100%;
-  }
-}
+/* You can add global styles to this file, and also import other style files */
