--- a/projects/ngx-bit/router/bit-page-header/bit-page-header.component.html
+++ b/projects/ngx-bit/router/bit-page-header/bit-page-header.component.html
@@ -5,7 +5,7 @@
       <i nz-icon nzType="right"></i>
     </ng-template>
     <nz-breadcrumb-item>
-      <a routerLink="/">{{ bit.l["dashboard"] }}</a>
+      <a routerLink="/">{{ bit.l['dashboard'] }}</a>
     </nz-breadcrumb-item>
     <nz-breadcrumb-item *ngFor="let x of router.breadcrumb; index as i; last as islast">
       <ng-container *ngIf="islast; else notLast">
