--- a/projects/ngx-bit/router/bit-sider/bit-sider.component.html
+++ b/projects/ngx-bit/router/bit-sider/bit-sider.component.html
@@ -1,11 +1,6 @@
 <nz-sider nzCollapsible [(nzCollapsed)]="collapsed" [nzBreakpoint]="'lg'">
   <div class="scroll-bar">
-    <ul
-      nz-menu
-      [nzTheme]="'dark'"
-      [nzInlineCollapsed]="collapsed"
-      [nzMode]="collapsed ? 'vertical' : 'inline'"
-    >
+    <ul nz-menu [nzTheme]="'dark'" [nzInlineCollapsed]="collapsed" [nzMode]="collapsed ? 'vertical' : 'inline'">
       <ng-container *ngTemplateOutlet="navTemplate; context: { $implicit: data }"></ng-container>
       <ng-template #navTemplate let-navs>
         <ng-container *ngFor="let nav of navs">
@@ -21,19 +16,13 @@
             </li>
           </ng-container>
           <ng-template #notRouter>
-            <li
-              nz-submenu
-              [nzOpen]="router.navActive.includes(nav.key)"
-              [nzPaddingLeft]="level(nav)"
-            >
+            <li nz-submenu [nzOpen]="router.navActive.includes(nav.key)" [nzPaddingLeft]="level(nav)">
               <span title>
                 <i nz-icon [nzType]="nav.icon"></i>
                 <span>{{ nav.name | object: bit.locale }}</span>
               </span>
               <ul>
-                <ng-container
-                  *ngTemplateOutlet="navTemplate; context: { $implicit: nav.children }"
-                ></ng-container>
+                <ng-container *ngTemplateOutlet="navTemplate; context: { $implicit: nav.children }"></ng-container>
               </ul>
             </li>
           </ng-template>
