--- a/projects/ngx-bit/component/bit-i18n-switch/bit-i18n-switch.component.html
+++ b/projects/ngx-bit/component/bit-i18n-switch/bit-i18n-switch.component.html
@@ -3,7 +3,7 @@
     <ng-container *ngFor="let item of bit.i18nSwitch">
       <label nz-radio-button [nzValue]="item.i18n">
         <span>
-          <b>{{ item.name[bit.locale] }}</b>
+          <b>{{ item.name | object: bit.locale }}</b>
         </span>
       </label>
     </ng-container>
