--- a/projects/ngx-bit/router/bit-sider/bit-sider.component.scss
+++ b/projects/ngx-bit/router/bit-sider/bit-sider.component.scss
@@ -5,7 +5,34 @@ nz-sider {
   left: 0;
 }
 
-.scroll-bar {
-  height: calc(100% - 48px);
+.sider-logo {
+  padding: 16px;
+  align-items: center;
+  cursor: pointer;
+
+  &.collapsed {
+    display: none;
+  }
+
+  h1 {
+    display: inline-block;
+    height: 32px;
+    line-height: 32px;
+    margin: 0 0 0 12px;
+    color: #fff;
+    font-weight: 600;
+    font-size: 18px;
+    vertical-align: middle;
+  }
+
+  img {
+    display: inline-block;
+    height: 32px;
+    vertical-align: middle;
+  }
+}
+
+.sider-scroll-bar {
+  height: calc(100% - 112px);
   overflow: auto;
 }
