--- a/projects/ngx-bit/component/bit-i18n/bit-i18n.component.html
+++ b/projects/ngx-bit/component/bit-i18n/bit-i18n.component.html
@@ -3,16 +3,17 @@
     {{ item.content | nzEllipsis: 100:'...' }}
     <ul nz-list-item-actions>
       <nz-list-item-action>
-        <a (click)="open(item.id)">{{ item.name }}</a>
+        <button nz-button nzType="text" type="button" (click)="open(item.id)">
+          <i nz-icon nzType="edit"></i>
+          {{ item.name }}
+        </button>
       </nz-list-item-action>
     </ul>
   </nz-list-item>
 </nz-list>
 
-<nz-modal [(nzVisible)]="i18nVisable" [nzTitle]="title" (nzOnCancel)="close()">
-  <ng-template #title>
-    {{ bitTitle }}
-  </ng-template>
+<nz-modal [(nzVisible)]="visable" [nzTitle]="title" (nzOnCancel)="close()">
+  <ng-template #title> 国际化设置 <nz-tag>中文</nz-tag> </ng-template>
   <ng-container *nzModalContent>
     <ng-content></ng-content>
   </ng-container>
