废弃 bit-i18n-switch

--- a/src/app/pages/cms-example/cms-example.component.html
+++ b/src/app/pages/cms-example/cms-example.component.html
@@ -1,6 +1,4 @@
-<bit-header back>
-  <bit-i18n-switch></bit-i18n-switch>
-</bit-header>
+<bit-header back> </bit-header>
 
 <nz-card>
   <form nz-form [formGroup]="form" (bitFormSubmit)="submit($event)">
