--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -4,15 +4,15 @@
 }
 
 .login-content {
-  text-align: center;
-  margin: 20% auto 0;
-  width: 390px;
+  margin: 25% auto 0;
+  width: 360px;
   border-radius: 3px;
   box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
 
   .logo {
     width: 100%;
     padding: 36px 0 24px;
+    text-align: center;
 
     img {
       height: 128px;
@@ -20,7 +20,9 @@
   }
 
   h1 {
+    font-size: 20px;
     padding-bottom: 24px;
+    text-align: center;
   }
 }
 
