--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -77,7 +77,7 @@
         <ng-template #split>
           <nz-divider nzType="vertical"></nz-divider>
         </ng-template>
-        <a *nzSpaceItem nz-typography>Bit Case</a>
+        <a *nzSpaceItem nz-typography>案例</a>
         <a *nzSpaceItem nz-typography>BSD-3-Clause License</a>
         <a *nzSpaceItem nz-typography nz-dropdown [nzDropdownMenu]="language">
           <i nz-icon nzType="translation"></i>
